kubernetes/sample/example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  annotations:
    kubernetes.io/ingress.class: kengine
spec:
  rules:
  - host: example1.kubernetes.localhost
    http:
      paths:
      - path: /hello1
        pathType: Prefix
        backend:
          service:
            name: example1
            port:
              number: 8080
      - path: /hello2
        pathType: Prefix
        backend:
          service:
            name: example2
            port:
              number: 8080
  - host: example2.kubernetes.localhost
    http:
      paths:
      - path: /hello1
        pathType: Prefix
        backend:
          service:
            name: example1
            port:
              number: 8080
      - path: /hello2
        pathType: Prefix
        backend:
          service:
            name: example2
            port:
              number: 8080
#   tls:
#   - secretName: ssl-example2.kubernetes.localhost
#     hosts:
#     - example2.kengine.dev
